# beatrunner

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json
beatrunner_dsp/: Cargo.toml
beatrunner_dsp/src/: main.rs
src/: config.ts  files.d.ts  game.ts  main.ts  resources.ts  stats.ts  utils.ts
src/actors/: animation-manager.ts  baddie.ts  bullet.ts  health-bar.ts  missile.ts  ship.ts
