[package]
name = "beatrunner_dsp"
version = "0.1.0"
authors = [
    "Ryan Butler <thebutlah@gmail.com>",
    "Eric Graves <eridgraves@gmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puremp3 = "0.1"
rustfft = "5"
lazy_static = "1"
