[package]
name = "beatrunner_dsp"
version = "0.1.0"
authors = [
    "Ryan Butler <thebutlah@gmail.com>",
    "Eric Graves <eridgraves@gmail.com>",
    "Sam Katz <sammykatz@sbcglobal.net>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplemad = "0.9"
rustfft = "5"
lazy_static = "1"
